# TestCatchErrors

./: .gitignore  CMakeLists.txt  FilesystemTest.cpp  FindFilesystem.cmake  GNUmakefile  OnLeavingScope.cpp  OnLeavingScope.hpp  RangesSamples.cpp  ScopeGuard.hpp  ScopeGuardOnExit.cpp  ScopeGuardTest.cpp  UncaughtExceptionCounter.cpp  UncaughtExceptionCounter.hpp  array_size.cpp  filesystem_test.cpp  uncaught_exception.cpp
.github/workflows/: c-cpp.yml
src/: ErrorHandler.cpp  ErrorHandler.h  at_quick_exit.c  backtrace.c  main.cpp
unused/: array_size.cpp  header.hpp
